--- a/templates/directory-modals.html
+++ b/templates/directory-modals.html
@@ -1,5 +1,5 @@
 {#- modal popup for when 'add bookmark' is clicked  #}
-<div class="modal" id="add-bookmark">
+<div class="modal fade" id="add-bookmark">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<form action="{{ url_bookmark }}" method="POST" enctype="multipart/form-data" autocomplete="off">
@@ -25,7 +25,7 @@
 	</div>
 </div>
 
-<div class="modal" id="upload-drag-over">
+<div class="modal fade" id="upload-drag-over">
 	<div class="modal-dialog">
 		<div class="modal-content" style="opacity: 0.8;">
 			<div class="modal-body text-center">
@@ -37,7 +37,7 @@
 	</div>
 </div>
 
-<div class="modal" id="upload-file">
+<div class="modal fade" id="upload-file">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<form action="{{ url_home }}" method="POST" enctype="multipart/form-data" autocomplete="off">
